Fix alignment issue

--- a/src/pages/party-crasher-ministry-resources.astro
+++ b/src/pages/party-crasher-ministry-resources.astro
@@ -146,7 +146,7 @@ const preorderBulkLink = "https://form.jotform.com/240134881589969";
   .header,
   .aside,
   .page-content {
-    @apply min-w-[0px] w-full max-w-[65ch] mx-auto;
+    @apply min-w-[0px] w-full max-w-[780px] mx-auto;
   }
 
   .page-content h4 {
