Add resources page

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -6,6 +6,7 @@
     <a class="nav-link" href="/about">About</a>
     <a class="nav-link" href="/books">Books</a>
     <a class="nav-link" href="/speaking">Speaking</a>
+    <a class="nav-link" href="/party-crasher-ministry-resources">Resources</a>
     <a class="nav-link" href="/blog">Blog</a>
   </div>
   <div class="relative md:hidden">
@@ -15,6 +16,7 @@
       <a class="nav-link" href="/about">About</a>
       <a class="nav-link" href="/books">Books</a>
       <a class="nav-link" href="/speaking">Speaking</a>
+      <a class="nav-link" href="/party-crasher-ministry-resources">Resources</a>
       <a class="nav-link" href="/blog">Blog</a>
     </div>
   </div>
