--- a/src/pages/party-crasher-ministry-resources.astro
+++ b/src/pages/party-crasher-ministry-resources.astro
@@ -19,12 +19,30 @@ const preorderBulkLink = "https://form.jotform.com/240134881589969";
 >
   <div class="page-content">
     <section>
-      <p class="text-3xl italic">
+      <p class="text-3xl italic !mb-20">
         Interested in The Party Crasher as a resource for your church or
         ministry? Here's some resources to help equip your people to navigate
         the political division going into the next election season with maturity
         and faithfulness to Jesus.
       </p>
+      <h4>Bible Study</h4>
+      <p>
+        Use this 5-day Bible Study, based on The Party Crasher, to prepare your
+        heart for the upcoming political season. Includes 5 videos which go with
+        each day of the Bible Study.
+      </p>
+      <ResourceContainer>
+        <div class="grid grid-cols-1 gap-4">
+          <DownloadButton id="cpp-pdf" pdf="party-crasher-bible-study.pdf">
+            <span
+              class="text-base underline font-semibold flex items-center gap-2"
+            >
+              <PDFIcon />
+              party-crasher-bible-study.pdf
+            </span>
+          </DownloadButton>
+        </div>
+      </ResourceContainer>
     </section>
     <section>
       <h4>Book Overiew</h4>
