Update page order

--- a/src/pages/party-crasher-ministry-resources.astro
+++ b/src/pages/party-crasher-ministry-resources.astro
@@ -33,7 +33,10 @@ const preorderBulkLink = "https://form.jotform.com/240134881589969";
       </p>
       <ResourceContainer>
         <div class="grid grid-cols-1 gap-4">
-          <DownloadButton id="cpp-pdf" pdf="party-crasher-bible-study.pdf">
+          <DownloadButton
+            id="pc-bible-study-pdf"
+            pdf="party-crasher-bible-study.pdf"
+          >
             <span
               class="text-base underline font-semibold flex items-center gap-2"
             >
@@ -43,37 +46,6 @@ const preorderBulkLink = "https://form.jotform.com/240134881589969";
           </DownloadButton>
         </div>
       </ResourceContainer>
-    </section>
-    <section>
-      <h4>Book Overiew</h4>
-      <p>
-        These three short videos give an overview of what ground The Party
-        Crasher covers and how it can be used as a resource for your church or
-        ministry.
-      </p>
-      <div class="grid gap-4 pt-8 mb-8">
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/Smp-CSEeJSo?si=fTPwAitP0Pa8KB1L&controls=0"
-          title="Party Crasher Overview (1 of 3)"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/Lm9fHI57VMU?si=x4QSBKSDUEgKWSxb&controls=0"
-          title="Party Crasher Overview (2 of 3)"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/SWZDE7lDnwI?si=PvvzI5bQ7871Bp_f&controls=0"
-          title="Party Crasher Overview (3 of 3)"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-      </div>
     </section>
 
     <section>
@@ -155,6 +127,37 @@ const preorderBulkLink = "https://form.jotform.com/240134881589969";
         >
           Preorder In Bulk
         </a>
+      </div>
+    </section>
+    <section>
+      <h4>Book Overiew</h4>
+      <p>
+        These three short videos give an overview of what ground The Party
+        Crasher covers and how it can be used as a resource for your church or
+        ministry.
+      </p>
+      <div class="grid gap-4 pt-8 mb-8">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/Smp-CSEeJSo?si=fTPwAitP0Pa8KB1L&controls=0"
+          title="Party Crasher Overview (1 of 3)"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/Lm9fHI57VMU?si=x4QSBKSDUEgKWSxb&controls=0"
+          title="Party Crasher Overview (2 of 3)"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/SWZDE7lDnwI?si=PvvzI5bQ7871Bp_f&controls=0"
+          title="Party Crasher Overview (3 of 3)"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
       </div>
     </section>
   </div>
