--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,4 @@
 ---
-import Banner from "../components/Banner.astro";
 import Footer from "../components/Footer.astro";
 import NavBar from "../components/NavBar.astro";
 export interface Props {
@@ -57,7 +56,7 @@ const { title, description, slug } = Astro.props;
   </head>
   <body class="text-2xl">
     <slot name="bg" />
-    <Banner />
+    <!-- <Banner /> -->
     <header>
       <NavBar />
       <div class="outer-container fade-in">
