God Is On Your Side

--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -4,14 +4,16 @@ import EmailSignup from "./InlineEmailSignup.astro";
 
 <div class="mt-20">
   <h4 class="mb-20">My Latest Book:</h4>
-  <article id="latest-work" class="bg-[var(--light-blue-2)] p-8 md:p-20 rounded-xl md:rounded-3xl w-full grid md:grid-cols-[1fr_350px] gap-20">
+  <article id="latest-work" class="bg-[var(--light-orange)] p-8 md:p-20 rounded-xl md:rounded-3xl w-full grid md:grid-cols-[1fr_350px] gap-20">
     <div class="w-full self-center">
       <div>
         <h3 class="font-light mb-8">
-          <b>The Party Crasher</b>
+          <b>God Is On Your Side</b>
         </h3>
         <p class="text-xl">
-          The fervency with which so many advocate their political ideals is best described in religious terms. Fortunately, Jesus is the ultimate Party Crasher. And he is disrupting politics-as-usual to invite us to embrace a bold vision capable of redeeming our partisan divide.
+          You don’t have to win God’s love. God has come to win yours. Even in your darkest moments, he
+pursues you to shape you and draw you close. Come encounter the hope-filled radiant love of the
+God who is always on your side.
         </p>
       </div>
       <div class="grid mt-6 email-signup-wrapper">
@@ -23,7 +25,7 @@ import EmailSignup from "./InlineEmailSignup.astro";
       <img
         width="500px"
         class="w-full h-auto"
-        src="/images/the-party-crasher.png"
+        src="/images/god-is-on-your-side.jpg"
         alt="The Party Crasher"
       />
     </figure>
