--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,6 +81,7 @@ const { title, description, slug } = Astro.props;
     --gold: rgb(209, 161, 95);
     --light-blue: #ebedff;
     --light-blue-2: rgba(30, 117, 175, 0.05);
+    --light-orange :rgb(253, 125, 59,.05);
   }
 
   html {
