--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const postData = await getPosts();
 const recentPosts = postData[0].recentPosts;
 const title = "Joshua Ryan Butler";
 const description =
-  "I’m the author of The Party Crasher (and a few other books). I love shifting paradigms, to help people who wrestle with tough topics of the Christian faith by confronting popular caricatures and replacing them with the real thing.";
+  "I’m the author of God Is On Your Side (and a few other books). I love shifting paradigms, to help people who wrestle with tough topics of the Christian faith by confronting popular caricatures and replacing them with the real thing.";
 ---
 
 <Layout title={title} description={description} slug="home">
@@ -25,12 +25,14 @@ const description =
     <section class="outer-container">
       <Callout />
     </section>
-    <section class="outer-container">
-      <Testimonials
-        testimonials={testimonials?.slice(0, 2)}
-        title={books[0].title}
-      />
-    </section>
+    {testimonials?.length > 0 && (
+      <section class="outer-container">
+        <Testimonials
+          testimonials={testimonials?.slice(0, 2)}
+          title={books[0].title}
+        />
+      </section>
+    )}
     <MyBooks books={books} />
     <section class="py-[140px] grid md:grid-cols-2 gap-20 outer-container">
       <RecentPosts posts={recentPosts} />
