--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,7 +34,7 @@ import { books } from "../pages/books.astro";
             <a href="https://twitter.com/butlerjosh" target="_blank">Twitter</a>
           </li> -->
           <li>
-            <a href="https://www.instagram.com/joshuabutlerphx" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/joshuabutlerpdx" target="_blank">Instagram</a>
           </li>
           <li>
             <a href="https://www.facebook.com/profile.php?id=100006913480484">Facebook</a>
